# classic-cache

./: README.md  setup.cfg
sources/classic/cache/: __init__.py  cache.py  decorator.py  key_generator.py  serializer.py  typings.py  value.py
sources/classic/cache/caches/: __init__.py  in_memory.py  redis.py
sources/classic/cache/key_generators/: __init__.py  blake2b.py  msgspec.py  orjson.py  pure_hash.py
sources/classic/cache/serializers/: __init__.py  pickle.py
tests/: conftest.py  test_caches.py  test_decorator.py  test_key_generator.py
tests/caches/: test_redis.py
tests/serializers/: test_pickle.py
