[metadata]
name = classic-cache
version = 1.0.0
description = Provides decorator for cache
author = Sergei Variasov, Sergei Mikhaylov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic-cache
project_urls =
    Bug Tracker = https://github.com/variasov/classic-cache/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.10
package_dir =
    = sources
install_requires =
    classic-components~=1.1.2
    redis==5.0.8
    orjson==3.10.7
    fakeredis==2.24.1
    freezegun==1.5.1
    msgspec==0.18.6


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=7.4.4
    pytest-cov~=4.1
    twine~=4.0
    build~=1.0
